Create view BusLineUI, EmployeeUI, RegisterEmployeeUI

--- a/src/main/resources/br/edu/ifsp/application/view/TrechoUI.fxml
+++ b/src/main/resources/br/edu/ifsp/application/view/TrechoUI.fxml
@@ -3,12 +3,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="538.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.ifsp.application.controller.TrechoUIController">
+<AnchorPane prefHeight="400.0" prefWidth="538.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.ifsp.application.controller.TrechoUIController">
    <children>
       <TextField fx:id="txtConsulta" layoutX="14.0" layoutY="31.0" prefHeight="25.0" prefWidth="235.0" text="Digite o id do trecho para pesquisar" />
       <Button fx:id="btnConsulta" layoutX="263.0" layoutY="31.0" mnemonicParsing="false" onAction="#consultar" text="Consultar trecho" />
       <Button fx:id="btnCadastrar" layoutX="385.0" layoutY="31.0" mnemonicParsing="false" onAction="#cadastrar" text="Cadastrar trecho" />
-      <Pane fx:id="areaCampoTrecho" layoutX="14.0" layoutY="89.0" prefHeight="191.0" prefWidth="497.0" visible="false">
+      <Pane fx:id="areaCampoTrecho" layoutX="14.0" layoutY="89.0" prefHeight="191.0" prefWidth="497.0">
          <children>
             <Label layoutX="17.0" layoutY="14.0" prefHeight="17.0" prefWidth="40.0" text="Nome:" />
             <Label layoutX="22.0" layoutY="51.0" text="Cidade origem: " />
@@ -28,7 +28,7 @@
             <Label fx:id="lbSeguro" layoutX="363.0" layoutY="127.0" prefHeight="17.0" prefWidth="120.0" />
          </children>
       </Pane>
-      <Button fx:id="btnEditar" layoutX="37.0" layoutY="280.0" mnemonicParsing="false" onAction="#editar" text="Editar trecho" visible="false" />
-      <Button fx:id="btnRemover" layoutX="171.0" layoutY="280.0" mnemonicParsing="false" onAction="#remover" text="Remover trecho" visible="false" />
+      <Button fx:id="btnEditar" layoutX="37.0" layoutY="280.0" mnemonicParsing="false" onAction="#editar" text="Editar trecho" />
+      <Button fx:id="btnRemover" layoutX="171.0" layoutY="280.0" mnemonicParsing="false" onAction="#remover" text="Remover trecho" />
    </children>
 </AnchorPane>
