--- a/src/main/resources/br/edu/ifsp/application/view/BusLineUI.fxml
+++ b/src/main/resources/br/edu/ifsp/application/view/BusLineUI.fxml
@@ -8,7 +8,7 @@
       <TextField fx:id="txtConsultarLinha" layoutX="34.0" layoutY="33.0" prefHeight="25.0" prefWidth="244.0" />
       <Button fx:id="btnConsultarLinha" layoutX="300.0" layoutY="33.0" mnemonicParsing="false" onAction="#consultarLinha" prefHeight="25.0" prefWidth="102.0" text="Consultar linha" />
       <Button fx:id="btnCadastrarLinha" layoutX="417.0" layoutY="33.0" mnemonicParsing="false" onAction="#cadastrarLinha" prefHeight="25.0" prefWidth="102.0" text="Cadastrar Linha" />
-      <Pane fx:id="areaCamposLinha" layoutX="34.0" layoutY="76.0" prefHeight="56.0" prefWidth="244.0" visible="false">
+      <Pane fx:id="areaCamposLinha" layoutX="34.0" layoutY="76.0" prefHeight="56.0" prefWidth="244.0">
          <children>
             <Label fx:id="lbNomeLinha" layoutX="47.0" layoutY="17.0" prefHeight="17.0" prefWidth="188.0" />
             <Label layoutY="17.0" text="Nome:" />
