Create view AdminMainUI

--- a/src/main/resources/br/edu/ifsp/application/view/PatchUI.fxml
+++ b/src/main/resources/br/edu/ifsp/application/view/PatchUI.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="538.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.ifsp.application.controller.TrechoUIController">
+<AnchorPane prefHeight="400.0" prefWidth="538.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.ifsp.application.controller.PatchUIController">
    <children>
       <TextField fx:id="txtConsulta" layoutX="14.0" layoutY="31.0" prefHeight="25.0" prefWidth="235.0" text="Digite o id do trecho para pesquisar" />
       <Button fx:id="btnConsulta" layoutX="263.0" layoutY="31.0" mnemonicParsing="false" onAction="#consultar" text="Consultar trecho" />
