--- a/src/main/resources/br/edu/ifsp/application/view/RegisterBusLineUI.fxml
+++ b/src/main/resources/br/edu/ifsp/application/view/RegisterBusLineUI.fxml
@@ -8,6 +8,7 @@
       <Label layoutX="28.0" layoutY="38.0" text="Nome:" />
       <TextField fx:id="txtNome" layoutX="77.0" layoutY="34.0" prefHeight="25.0" prefWidth="186.0" />
       <Button fx:id="btnCadastrar" layoutX="253.0" layoutY="111.0" mnemonicParsing="false" onAction="#cadastrarLinha" text="Cadastrar" />
-      <Label fx:id="lbError" layoutX="28.0" layoutY="115.0" prefHeight="17.0" prefWidth="194.0" />
+      <Label fx:id="lbError" layoutX="28.0" layoutY="67.0" prefHeight="17.0" prefWidth="194.0" />
+      <Button fx:id="btnVoltar" layoutX="20.0" layoutY="111.0" mnemonicParsing="false" onAction="#backToAction" text="Voltar" />
    </children>
 </AnchorPane>
